fixed spacing

--- a/unsolved/style.css
+++ b/unsolved/style.css
@@ -9,7 +9,7 @@ body {
 #fmd {float: top; text-align: left; font-weight: bold; font-size: small ; color: white;}
 
 
-div {text-align: center; align-items: center; padding: 40% 0% 5%;}
+div {text-align: center; align-items: center; padding: 30% 0% 5%;}
 h1 {black; font-size: smaller; display: inline-block; 20px margin: 20px;}
 
 h2 {line-height: 70px;color: white; font-size: 70px; margin: 5%}
